test/visibility/import/enablesUnqualified/multipleUnqualified/last-before-list-not-mod.good
last-before-list-not-mod.chpl:7: error: Last symbol prior to `{` in import must be a module, symbol 'B' is not
