test/visibility/import/enablesUnqualified/multipleUnqualified/last-before-list-not-mod.chpl
module A {
  class B {
    var x: int;
  }
}
module User {
  import A.B.{x}; // should fail

  proc main() {
    writeln(x);
  }
}
